# regex

./: .travis.yml  Cargo.toml  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
regex_macros/benches/: bench.rs  prefix.rs  shootout-regex-dna.rs
regex_macros/src/: lib.rs
regex_macros/tests/: test_dynamic_backtrack.rs  test_dynamic_nfa.rs
src/: backtrack.rs  char.rs  compile.rs  input.rs  lib.rs  nfa.rs  pool.rs  prefix.rs  program.rs  re.rs  vm.rs
src/regex/: compile.rs.html  lib.rs.html  re.rs.html  vm.rs.html
