[package]
name = "regex"
version = "0.1.33"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "http://doc.rust-lang.org/regex"
homepage = "https://github.com/rust-lang/regex"
description = """
An implementation of regular expressions for Rust.
"""

[[test]]
path = "regex_macros/tests/test_dynamic.rs"
name = "dynamic"

[[test]]
path = "regex_macros/tests/test_dynamic_nfa.rs"
name = "dynamic_nfa"

[[test]]
path = "regex_macros/tests/test_dynamic_backtrack.rs"
name = "dynamic_backtrack"

[[test]]
path = "regex_macros/benches/shootout-regex-dna.rs"
name = "shootout_regex_dna"

[[bench]]
name = "all"
path = "regex_macros/benches/bench_dynamic.rs"
test = false
bench = true

[[bench]]
name = "prefix"
path = "regex_macros/benches/prefix.rs"
test = false
bench = true

[dependencies]
libc = "*"
regex-syntax = { path = "regex-syntax", version = "0.1" }

[dev-dependencies]
rand = "0.3"

[features]
pattern = []

[profile.bench]
lto = true
